cria as rotina de contratações e trabalhos
